# ScanRetrival

./: .gitignore  Dockerfile  docker-compose.debug.yml  docker-compose.yml  hello.py  pyproject.toml  requirements.txt
Jupyter/: read.ipynb
app/: bucket.py  database.py  main.py  models.py
app/routers/: upload.py  view.py
app/tools/: create_bucket.py  create_db.py
