[project]
name = "scanretrival"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "minio>=7.2.15",
    "mysqlclient>=2.2.7",
    "prefect>=3.2.7",
    "pydicom>=3.0.1",
    "pymysql>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.38",
]
